@@ -51,6 +51,8 @@ Changes from 0.7-0 to 0.8-0
 14. Added 'interpolate' argument to grid.animate()
     (only currently supports "linear" or "discrete").
 
+15. Implemented animation for segments grobs.
+
 
 Changes from 0.6-0 to 0.7-0
 ===========================
